--- a/ui/projectdirectorywidget.ui
+++ b/ui/projectdirectorywidget.ui
@@ -66,6 +66,9 @@
       </widget>
      </item>
      <item>
+      <widget class="QComboBox" name="m_prefixComboBox" />
+     </item>
+     <item>
       <spacer>
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
