#142. Manque plus que les options.

--- a/application.qrc
+++ b/application.qrc
@@ -74,6 +74,7 @@
         <file>images/spain.png</file>
         <file>images/splash.png</file>
         <file>images/style.png</file>
+        <file>images/tabclose.png</file>
         <file>images/template.png</file>
         <file>images/textedit.png</file>
         <file>images/typecss.png</file>
