--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -61,6 +61,15 @@
         <file>images/network_outgoing_lan.png</file>
         <file>images/noeud.png</file>
         <file>images/portugal.png</file>
+        <file>images/preference-rcs.png</file>
+        <file>images/preferences-color.png</file>
+        <file>images/preferences-editor.png</file>
+        <file>images/preferences-font.png</file>
+        <file>images/preferences-general.png</file>
+        <file>images/preferences-plugin.png</file>
+        <file>images/preferences-project.png</file>
+        <file>images/preferences-tools.png</file>
+        <file>images/preferences-ui.png</file>
         <file>images/project_close.png</file>
         <file>images/project_open.png</file>
         <file>images/pushbutton.png</file>
