--- a/xinx/ui/xmlpresentationwidget.ui
+++ b/xinx/ui/xmlpresentationwidget.ui
@@ -29,9 +29,19 @@
     <number>0</number>
    </property>
    <property name="verticalSpacing" >
-    <number>3</number>
+    <number>2</number>
    </property>
-   <item row="0" column="0" colspan="2" >
+   <item row="0" column="0" >
+    <widget class="QToolButton" name="m_refreshToolButton" >
+     <property name="text" >
+      <string>...</string>
+     </property>
+     <property name="icon" >
+      <iconset resource="../application.qrc" >:/images/reload.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" >
     <widget class="QComboBox" name="m_presentationComboBox" />
    </item>
    <item row="1" column="0" >
