--- a/xinx/ui/xmlpresentationwidget.ui
+++ b/xinx/ui/xmlpresentationwidget.ui
@@ -44,7 +44,7 @@
    <item row="0" column="1" >
     <widget class="QComboBox" name="m_presentationComboBox" />
    </item>
-   <item row="1" column="0" >
+   <item row="2" column="0" >
     <widget class="QToolButton" name="m_clearToolButton" >
      <property name="text" >
       <string>...</string>
@@ -54,10 +54,10 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1" >
+   <item row="2" column="1" >
     <widget class="QLineEdit" name="m_filtreLineEdit" />
    </item>
-   <item row="2" column="0" colspan="2" >
+   <item row="3" column="0" colspan="2" >
     <widget class="QTreeView" name="m_presentationTreeView" >
      <property name="dragEnabled" >
       <bool>true</bool>
@@ -67,13 +67,23 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2" >
+   <item row="4" column="0" colspan="2" >
     <widget class="QProgressBar" name="m_presentationProgressBar" >
      <property name="value" >
       <number>0</number>
      </property>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2" >
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>&amp;Filtre :</string>
+     </property>
+     <property name="buddy" >
+      <cstring>m_filtreLineEdit</cstring>
      </property>
     </widget>
    </item>
