--- a/xinx/ui/xinxlistwidget.ui
+++ b/xinx/ui/xinxlistwidget.ui
@@ -12,7 +12,7 @@
   <property name="windowTitle" >
    <string/>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QHBoxLayout" >
    <property name="leftMargin" >
     <number>0</number>
    </property>
@@ -25,10 +25,10 @@
    <property name="bottomMargin" >
     <number>0</number>
    </property>
-   <item row="0" column="0" colspan="2" >
+   <item>
     <widget class="QListWidget" name="m_list" />
    </item>
-   <item rowspan="2" row="0" column="2" >
+   <item>
     <layout class="QVBoxLayout" >
      <property name="spacing" >
       <number>6</number>
@@ -96,24 +96,10 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0" >
-    <widget class="QLabel" name="label_7" >
-     <property name="text" >
-      <string>&amp;Current value :</string>
-     </property>
-     <property name="buddy" >
-      <cstring>m_lineEdit</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" >
-    <widget class="QLineEdit" name="m_lineEdit" />
-   </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>m_list</tabstop>
-  <tabstop>m_lineEdit</tabstop>
   <tabstop>m_btnAdd</tabstop>
   <tabstop>m_btnDel</tabstop>
   <tabstop>m_btnDef</tabstop>
@@ -121,22 +107,5 @@
  <resources>
   <include location="../application.qrc" />
  </resources>
- <connections>
-  <connection>
-   <sender>m_list</sender>
-   <signal>currentTextChanged(QString)</signal>
-   <receiver>m_lineEdit</receiver>
-   <slot>setText(QString)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>214</x>
-     <y>183</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>222</x>
-     <y>223</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
