--- a/components/xinxpluginselector.qrc
+++ b/components/xinxpluginselector.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/" >
+        <file>images/unknown.png</file>
         <file>images/configure.png</file>
         <file>images/help-about.png</file>
     </qresource>
