--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -14,7 +14,7 @@
   </property>
   <layout class="QGridLayout" >
    <item rowspan="4" row="0" column="0" >
-    <widget class="QListWidget" name="listWidget" >
+    <widget class="QListWidget" name="m_listWidget" >
      <property name="minimumSize" >
       <size>
        <width>128</width>
@@ -251,9 +251,9 @@ p, li { white-space: pre-wrap; }
         </spacer>
        </item>
        <item row="2" column="0" >
-        <widget class="QLabel" name="label_4" >
+        <widget class="QLabel" name="m_labelLink" >
          <property name="text" >
-          <string>Options related to a specifique revision manager must be changed in the "Modules" section.</string>
+          <string>Options related to a specifique revision manager must be changed in the "&lt;a href="#modules">Modules&lt;/a>" section.</string>
          </property>
          <property name="wordWrap" >
           <bool>true</bool>
@@ -952,7 +952,7 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>listWidget</sender>
+   <sender>m_listWidget</sender>
    <signal>currentTextChanged(QString)</signal>
    <receiver>label_18</receiver>
    <slot>setText(QString)</slot>
@@ -968,7 +968,7 @@ p, li { white-space: pre-wrap; }
    </hints>
   </connection>
   <connection>
-   <sender>listWidget</sender>
+   <sender>m_listWidget</sender>
    <signal>currentRowChanged(int)</signal>
    <receiver>stackedWidget</receiver>
    <slot>setCurrentIndex(int)</slot>
