--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -253,7 +253,7 @@ p, li { white-space: pre-wrap; }
        <item row="2" column="0" >
         <widget class="QLabel" name="m_labelLink" >
          <property name="text" >
-          <string>Options related to a specifique revision manager must be changed in the "&lt;a href="#modules">Modules&lt;/a>" section.</string>
+          <string>&lt;i>Options related to a specifique revision manager (such as CVS or Subversion) must be changed in the &lt;a href="#modules">Modules&lt;/a> section.&lt;/i></string>
          </property>
          <property name="wordWrap" >
           <bool>true</bool>
