--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -1,11 +1,13 @@
 <RCC>
     <qresource prefix="/" >
-        <file>images/dialog-information.png</file>
+        <file>../components/translations/xinxcomponents_fr.qm</file>
+        <file>../libxinx/translations/libxinx_fr.qm</file>
         <file>images/1downarrow.png</file>
         <file>images/1uparrow.png</file>
         <file>images/action.png</file>
         <file>images/add.png</file>
         <file>images/balise.png</file>
+        <file>images/banner_wizard.png</file>
         <file>images/bookmark.png</file>
         <file>images/bookmarknext.png</file>
         <file>images/bookmarkprevious.png</file>
@@ -19,7 +21,9 @@
         <file>images/combobox.png</file>
         <file>images/configure.png</file>
         <file>images/datetimeedit.png</file>
+        <file>images/dialog-information.png</file>
         <file>images/down.png</file>
+        <file>images/draw-text.png</file>
         <file>images/edit-clear-locationbar-ltr.png</file>
         <file>images/edit-select-all.png</file>
         <file>images/edit.png</file>
@@ -100,10 +104,7 @@
         <file>images/vcs_update.png</file>
         <file>images/warning.png</file>
         <file>images/window_new.png</file>
-        <file>images/banner_wizard.png</file>
         <file>translations/qt_fr.qm</file>
         <file>translations/xinx_fr.qm</file>
-        <file>../libxinx/translations/libxinx_fr.qm</file>
-        <file>../components/translations/xinxcomponents_fr.qm</file>
     </qresource>
 </RCC>
