--- a/xinx/ui/xmlpresentationwidget.ui
+++ b/xinx/ui/xmlpresentationwidget.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>243</width>
-    <height>343</height>
+    <width>231</width>
+    <height>287</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -29,7 +29,7 @@
     <number>0</number>
    </property>
    <property name="verticalSpacing" >
-    <number>2</number>
+    <number>0</number>
    </property>
    <item row="0" column="0" >
     <widget class="QToolButton" name="m_refreshToolButton" >
@@ -41,8 +41,18 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" >
+   <item row="0" column="1" colspan="2" >
     <widget class="QComboBox" name="m_presentationComboBox" />
+   </item>
+   <item row="1" column="0" colspan="3" >
+    <widget class="QLabel" name="label" >
+     <property name="text" >
+      <string>&amp;Filtre :</string>
+     </property>
+     <property name="buddy" >
+      <cstring>m_filtreLineEdit</cstring>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0" >
     <widget class="QToolButton" name="m_clearToolButton" >
@@ -57,7 +67,21 @@
    <item row="2" column="1" >
     <widget class="QLineEdit" name="m_filtreLineEdit" />
    </item>
-   <item row="3" column="0" colspan="2" >
+   <item row="2" column="2" >
+    <widget class="QComboBox" name="m_filterComboBox" >
+     <item>
+      <property name="text" >
+       <string>None</string>
+      </property>
+     </item>
+     <item>
+      <property name="text" >
+       <string>Sub-element</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="3" >
     <widget class="QTreeView" name="m_presentationTreeView" >
      <property name="dragEnabled" >
       <bool>true</bool>
@@ -67,23 +91,16 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2" >
+   <item row="4" column="0" colspan="3" >
     <widget class="QProgressBar" name="m_presentationProgressBar" >
+     <property name="maximum" >
+      <number>0</number>
+     </property>
      <property name="value" >
       <number>0</number>
      </property>
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2" >
-    <widget class="QLabel" name="label" >
-     <property name="text" >
-      <string>&amp;Filtre :</string>
-     </property>
-     <property name="buddy" >
-      <cstring>m_filtreLineEdit</cstring>
      </property>
     </widget>
    </item>
